[misc] More log excludes